--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /storage/*.key
 /vendor
 .env
+.env.testing
 .env.backup
 .env.production
 .phpunit.result.cache
@@ -17,3 +18,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+_ide_helper.php
+_ide_helper_models.php
